examples/test/testpolicy3146.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3146
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key30: value5
      key21: value7
      key4: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value36
          key3: value5
          key29: value5
      podSelector:
        matchLabels:
          key5: value16
